--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
