--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-query": "^4.29.12",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
@@ -23,7 +24,9 @@
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "@tanstack/react-query-devtools": "^4.29.12",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
@@ -31,7 +34,9 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "optionalDependencies": {
     "@tanstack/react-table": "^8.9.1"
