--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "@tanstack/react-table": "^8.9.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
