--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -27,8 +28,7 @@
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.1.3",
-    "@tanstack/react-table": "^8.9.1"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
