--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -40,7 +41,5 @@
     "eslint-config-next": "13.4.4",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
-  },
-  "optionalDependencies": {
   }
 }
