--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "lucide-react": "^0.240.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
